fixed another overflow issue

--- a/src/scss/layout/_banner.scss
+++ b/src/scss/layout/_banner.scss
@@ -3,6 +3,7 @@
 
 .banner {
   @include sectionSpacing;
+  overflow: hidden;
   background-color: color(desaturatedBlue);
   color: color(white);
 
