--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -3,6 +3,7 @@
 
 .features {
   height: 80vh;
+  overflow: hidden;
 
   @include responsive(lg) {
     height: auto;
