--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -3,6 +3,7 @@
 
 .hero {
   height: 80vh;
+  overflow: hidden;
 
   @include responsive(lg) {
     height: auto;
